fix lobby page white space

--- a/client/src/components/Lobby/lobby.css
+++ b/client/src/components/Lobby/lobby.css
@@ -20,6 +20,7 @@
 
 .available {
     margin-left: 10%;
+    margin-top: 3%;
 }
 .list-style {
     margin-top: 59px;
